system-config-printer (1.5.9-2) UNRELEASED; urgency=medium

  * Update debian/watch and Homepage to point to github repo
  * Update Vcs links

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 23 Feb 2017 16:58:19 -0500

system-config-printer (1.5.9-1) experimental; urgency=medium

  * New upstream release.
    - Drop debian/patches/0008-fix-device-sorting.patch,
      debian/patches/0009-fix-udev-add-printer-shbang.patch: Merged upstream
    - debian/patches/0007-fix-pk-package-name.patch: Refreshed
  * Switch to dh sequences from cdbs
  * Do not install smburi.py and debug.py in python3-cupshelpers anymore, this
    doesn't seem needed anymore
  * Bump debhelper compatibility to version 10
  * Drop debian/patches/03_install_layout.patch, this doesn't seem needed
    anymore and adjust debian/python3-cupshelpers.install
  * debian/control.in: Add gir1.2-polkit-1.0 to the dependencies

 -- Laurent Bigonville <bigon@debian.org>  Thu, 23 Feb 2017 22:26:58 +0100

system-config-printer (1.5.7-3) unstable; urgency=medium

  * debian/patches/0010-no-start-printer-applet-gnome.patch: Do not start the
    printer-applet in GNOME or Cinnamon {gnome,cinnamon}-settings-daemon is
    already taking care of this.
  * debian/rules: Move the definition of DEB_PYTHON3_MODULE_PACKAGES before
    including python-module.mk otherwise cdbs is not calling dh_python3 as
    expected

 -- Laurent Bigonville <bigon@debian.org>  Thu, 23 Feb 2017 17:55:32 +0100

system-config-printer (1.5.7-2) unstable; urgency=medium

  * Move part of system-config-printer to system-config-printer-common
    package, gnome-control-center only needs a subset of system-config-printer
  * debian/control.in: s/gnome-packagekit-session/gnome-software, the former
    is a transitional package
  * debian/control.in: Bump Standards-Version to 3.9.8 (no further changes)
  * Drop debian/gpk-install-package-name, this doesn't seem needed anymore
  * Drop adwaita-icon-theme dependency, try to avoid individual packages to