@@ -1,9 +1,17 @@
 system-config-printer (1.5.9-2) UNRELEASED; urgency=medium
 
+  [ Jeremy Bicha ]
   * Update debian/watch and Homepage to point to github repo
   * Update Vcs links
 
- -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 23 Feb 2017 16:58:19 -0500
+  [ Laurent Bigonville ]
+  * debian/control.in: Make the system-config-printer-common package recommend
+    cups-pk-helper and python3-smbc package instead of system-config-printer,
+    the code using these modules are in that package.
+  * Move the install-printerdriver executable to the -common package, it's
+    indirectly needed by scp-dbus-service
+
+ -- Laurent Bigonville <bigon@debian.org>  Thu, 23 Feb 2017 23:43:57 +0100
 
 system-config-printer (1.5.9-1) experimental; urgency=medium
 
